# IdentityCore

./: .env.example  .gitignore  .pre-commit-config.yml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: conftest.py  pyproject.toml
backend/ai-service/: Dockerfile
backend/ai-service/app/: __init__.py  bootstrap_models.py  main.py  pipeline.py  runtime.py  settings.py  storage.py
backend/ai-service/app/core/: auth.py  responses.py
backend/ai-service/app/document_classification/: __init__.py  classifier.py  matching.py  models.py  mrz.py  normalization.py  registry.py  scoring.py
backend/ai-service/app/routers/: health.py  processing.py
backend/ai-service/app/schemas/: processing.py
backend/ai-service/app/services/: processing.py
backend/ai-service/tests/: conftest.py  test_bootstrap_models.py  test_document_classification.py  test_health.py  test_registry.py
backend/django/: Dockerfile  celerybeat-schedule  db.sqlite3
backend/django/apps/access_control/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/django/apps/accounts/: admin.py  contact.py  cookies.py  managers.py  models.py  passwords.py  serializers.py  tests.py  urls.py  verification.py  views.py
backend/django/apps/analytics/: models.py  serializers.py
backend/django/apps/api_clients/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/django/apps/audit/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/django/apps/billing/: models.py  serializers.py
backend/django/apps/biometrics/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/django/apps/consent/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/django/apps/core/: models.py
backend/django/apps/document_captures/: admin.py  apps.py  models.py  urls.py  views.py
backend/django/apps/feature_flags/: models.py  serializers.py
backend/django/apps/identity_documents/: admin.py  apps.py  models.py  tasks.py  tests.py
backend/django/apps/incidents/: apps.py  models.py  serializers.py
backend/django/common/: authentication.py  catalog.py  cors.py  crypto.py  exceptions.py  fields.py  permissions.py  responses.py  storage.py  test_storage.py  throttling.py  validators.py
backend/django/config/: __init__.py  api_views.py  celery.py  graphql.py  graphql_auth.py  graphql_mutations.py  graphql_queries.py  graphql_schema.py  graphql_types.py  graphql_view.py  test_api.py  test_graphql.py  test_management_apis.py  tests.py  urls.py
frontend/: README.md  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/identitycore/: __init__.py  client.py  errors.py  webhooks.py
sdk/python/tests/: test_client.py
(+908 files in other folders)
