[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "identitycore"
version = "0.1.0"
description = "Python SDK for the IdentityCore public REST API."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "IdentityCore" }]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["identitycore*"]
