[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "identitycore"
version = "0.2.0"
description = "Server-side Python SDK for the IdentityCore REST API."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "IdentityCore" }]
license = { text = "Proprietary" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

[project.urls]
Documentation = "https://docs.identitycore.com"
Repository = "https://github.com/quarj0/IdentityCore"

[tool.setuptools.packages.find]
where = ["."]
include = ["identitycore*"]

[tool.setuptools.package-data]
identitycore = ["py.typed"]

